update cloud discovery schema
